--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,8 @@
-{"rewrites":[{"source":"/(.*)","destination":"/index.html"}]}
+{
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "buildCommand": "cd tikprofil-v2 && npm run build",
+  "outputDirectory": "tikprofil-v2/.next",
+  "installCommand": "pnpm install",
+  "framework": "nextjs",
+  "rootDirectory": "tikprofil-v2"
+}
