--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "cd tikprofil-v2 && npm run build",
   "outputDirectory": "tikprofil-v2/.next",
   "installCommand": "pnpm install",
-  "framework": "nextjs",
-  "rootDirectory": "tikprofil-v2"
+  "framework": "nextjs"
 }
