--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "cd tikprofil-v2 && npm run build",
   "outputDirectory": "tikprofil-v2/.next",
-  "installCommand": "pnpm install",
+  "installCommand": "cd tikprofil-v2 && npm install",
   "framework": "nextjs"
 }
