fix: use direct API endpoint for logo/cover upload bypassing document store

--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_mgDFJMcJdtIUI5WjcT5US0fD0XK6","orgId":"team_hXtPJCZebNnGk2JnlKjUqEp9","projectName":"tikprofil-v2"}
+{"projectId":"prj_mgDFJMcJdtIUI5WjcT5US0fD0XK6","orgId":"team_hXtPJCZebNnGk2JnlKjUqEp9","projectName":"tikprofil-v2","neverMindDeployCard":true}
